--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="rhJhHvjgUjr80vZh0bJrOxpqHXsl1pKD-eNCwA2KYN0"
+    />
     <title>amazone-clone-fronted</title>
   </head>
   <body>
